--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <!--<app-ecl-builder api-url='snowstorm/snomed-ct/' ecl-string='<< 781405001 |Medicinal product package (product)|: [1..*] { [1..1] 774160008 |Contains clinical drug| = << 763158003 |Medicinal product (product)| }'></app-ecl-builder>-->
-<ecl-builder api-url='snowstorm/snomed-ct' ecl-string='<< 781405001 |Medicinal product package (product)|: [1..*] { [1..1] 774160008 |Contains clinical drug| = << 763158003 |Medicinal product (product)| }'></ecl-builder>
+<!--<ecl-builder api-url='snowstorm/snomed-ct' ecl-string='<< 781405001 |Medicinal product package (product)|: [1..*] { [1..1] 774160008 |Contains clinical drug| = << 763158003 |Medicinal product (product)| }'></ecl-builder>-->
 <!--<ecl-builder></ecl-builder>-->
+<app-root></app-root>
 </body>
 </html>
